# sanji

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.agents/: AGENTS.md
.agents/commands/: new-blog.md
.agents/handoffs/: wezterm-tmux-setup.md
.agents/patterns/: blog-patterns.md
.agents/rules/: blog-rules.md
.agents/skills/: write-blog-post.md
.agents/skills/blog-critic/: SKILL.md
.agents/skills/write-blog-post/: SKILL.md
.github/workflows/: deploy.yml  syndicate.yml
docs/: index.md
docs/blog/: .authors.yml  index.md
docs/blog/posts/: aerial-views.md  claude-code-statusline-monitoring.md  devto-syndication.md  hermes.md  ohara.md  python-rglob-race.md  sanji.md  wezterm-tmux-setup.md
docs/extra/css/: cards.css  dracula.css
docs/projects/: index.md
docs/projects/doc-aid/: index.md
scripts/: .env.example  syndicate.py
