[project]
name = "sanji"
version = "0.2.0"
description = "Repository to maintain a personal gitHub page deployment using mkdocs."
authors = [{ name = "prateek11rai", email = "prateek11rai@protonmail.com" }]
requires-python = "==3.12.2"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material[imaging]>=9.6.14,<10",
    "mkdocs-rss-plugin>=1.17.7",
    "poethepoet>=0.34",
]

[tool.poe.tasks]
serve = { cmd = "uv run mkdocs serve", env = { DYLD_LIBRARY_PATH = "/opt/homebrew/lib" } }
build = { cmd = "uv run mkdocs build", env = { DYLD_LIBRARY_PATH = "/opt/homebrew/lib" } }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sanji"]

